Issue GRUND-44: Adjusted top margin of logo on small devices

--- a/scss/modules/_logo.scss
+++ b/scss/modules/_logo.scss
@@ -12,7 +12,7 @@
   height: 24px;
   left: $layout-spacing;
   position: relative;
-  top: 33px;
+  top: 31px;
   width: 260px;
   z-index: z($z-index-elements, logo);
 
